# STATS_SPORTS

./: .gitignore  NHL_ML.ipynb  README.md  STATS_NHL_ALL_19_25.xlsx  STATS_NHL_ALL_21_25.xlsx  config.yaml  evaluate.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  experiment.yml
artifacts_models/: metrics_test.csv  metrics_val.csv  predictions_next_202526.csv  predictions_test.csv  predictions_val.csv
